# dualmind

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build-releases.sh
.github/workflows/: release.yml
chat_app/: .env.example  README.md  pubspec.yaml
chat_app/lib/: main.dart
chat_app/lib/config/: env_config.dart  environment.dart
chat_app/lib/models/: chat_message.dart
chat_app/lib/providers/: theme_provider.dart
chat_app/lib/services/: chat_api.dart
chat_app/lib/widgets/: code_block.dart  message_bubble.dart
chat_app/test/: widget_test.dart
src/: lib.rs  main.rs
src/api/: client.rs  handlers.rs  mod.rs  models.rs  server.rs
src/cli/: mod.rs  terminal.rs
src/config/: aisettings.rs  mod.rs  settings.rs
src/core/: llm.rs  mod.rs  processor.rs  types.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/streaming/: mod.rs
src/tests/: llm_tests.rs
src/utils/: helpers.rs  mod.rs
