[package]
name = "dualmind"
version = "0.1.2"
edition = "2024"
authors = ["Ghayyem <ahrar@ghayyem.com>"]
description = "DualMind - A versatile AI assistant with reasoning and crafting capabilities"
readme = "README.md"
repository = "https://github.com/ahrar-deriv/dualmind"
license = "MIT"
keywords = ["ai", "chat", "reasoning", "llm", "dual-phase"]
categories = ["artificial-intelligence", "api-bindings", "command-line-utilities"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde_json = "1.0.140"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
chrono = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
dotenv = "0.15.0"

[dev-dependencies]
# Testing dependencies
